update hobbies and interests

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
     <h3>Hobbies and interests:</h3>
     <ul>
-      <li>??????</li>
-      <li>??????</li>
-      <li>??????</li>
+      <li>Baseball</li>
+      <li>Basketball</li>
+      <li>Badminton</li>
     </ul>
 
     <h3>Places I've visited:</h3>
     <ul>
-      <li>??????</li>
-      <li>??????</li>
-      <li>??????</li>
+      <li>Turkey</li>
+      <li>Spain</li>
+      <li>Egypt</li>
     </ul>
   </body>
 </html>
